--- a/next-app/package.json
+++ b/next-app/package.json
@@ -24,7 +24,10 @@
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-read-more-less": "^0.1.6",
+    "react-show-more": "^2.0.0",
     "rimraf": "^3.0.2",
+    "show-more-less": "^1.1.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
