--- a/next-app/package.json
+++ b/next-app/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.6.6",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
+    "classnames": "^2.3.1",
     "date-fns": "^2.29.1",
     "graphql": "^16.5.0",
     "next": "^12.2.5",
