--- a/next-app/package.json
+++ b/next-app/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^1.6.6",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.1",
     "graphql": "^16.5.0",
     "next": "^12.2.5",
@@ -30,14 +31,14 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
     "@types/node": "18.7.2",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "graphql": "^16.5.0",
     "serve": "^14.0.1",
-    "typescript": "4.7.4",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/introspection": "2.2.1"
+    "typescript": "4.7.4"
   }
 }
