Add Codepen embed and update about page

--- a/next-app/package.json
+++ b/next-app/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.8",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.1",
+    "dompurify": "^2.4.0",
     "graphql": "^16.5.0",
     "next": "^12.2.5",
     "postcss": "^8.4.16",
@@ -34,6 +35,7 @@
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
+    "@types/dompurify": "^2.3.4",
     "@types/node": "18.7.2",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
