--- a/keystone-server/package.json
+++ b/keystone-server/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@keystone-6/auth": "^4.0.0",
     "@keystone-6/core": "^2.1.0",
-    "@keystone-6/fields-document": "^4.0.0",
+    "@keystone-6/fields-document": "^4.1.2",
+    "dompurify": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/dompurify": "^2.3.4"
   }
 }
